<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/smart_padala" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_marginTop="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/fontWhite"
                android:textSize="17dp"
                android:text="Here's the instruction how to pay with Smart Padala. Just follow the steps"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="@color/fontWhite"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/ic_arrow_forward_black_24dp"
                android:textSize="15dp"
                android:text="@string/smart_step_1" />

            <TextView
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/ic_arrow_forward_black_24dp"
                android:textSize="15dp"
                android:text="@string/smart_step_2" />
            <TextView
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/ic_arrow_forward_black_24dp"
                android:textSize="15dp"
                android:text="@string/smart_step_3" />
            <TextView
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/ic_arrow_forward_black_24dp"
                android:textSize="15dp"
                android:text="@string/smart_step_4" />
            <TextView
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/ic_arrow_forward_black_24dp"
                android:textSize="15dp"
                android:text="@string/smart_step_5" />
            <TextView
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/ic_arrow_forward_black_24dp"
                android:textSize="15dp"
                android:text="@string/smart_step_6" />
            <TextView
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/ic_arrow_forward_black_24dp"
                android:textSize="15dp"
                android:text="@string/smart_step_7" />

        </LinearLayout>

        <Button
            android:layout_marginTop="20dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="View Sample"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_primary"
            android:textColor="@color/fontWhite"
            android:layout_marginBottom="40dp"
            android:visibility="invisible"

            />

    </LinearLayout>

</ScrollView>